--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,200;6..12,300;6..12,400;6..12,500;6..12,600;6..12,700;6..12,800;6..12,900&family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,200;6..12,300;6..12,400;6..12,500;6..12,600;6..12,700;6..12,800;6..12,900&family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
+          rel="stylesheet">
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
@@ -34,7 +35,8 @@
 <div class="hero">
     <div class="hero-inside">
         <h1 class="hero-title">Car Sharing</h1>
-        <p class="hero-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores doloribus error exercitationem id necessitatibus quisquam reiciendis repellat sit tempora.</p>
+        <p class="hero-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores doloribus error
+            exercitationem id necessitatibus quisquam reiciendis repellat sit tempora.</p>
         <div class="hero-buttons">
             <a href="" class="hero-button hero-button-1">Share a car</a>
             <a href="" class="hero-button hero-button-2">Key features</a>
@@ -52,7 +54,8 @@
                 </a>
                 <h3 class="blog-post-title">Lorem ipsum dolor.</h3>
                 <div class="blog-post-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores facilis fuga id numquam quod saepe soluta! Dolorem, doloribus, illum.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores facilis fuga id numquam quod
+                    saepe soluta! Dolorem, doloribus, illum.
                 </div>
                 <a href="" class="blog-post-button button">Read more</a>
             </article>
@@ -62,7 +65,8 @@
                 </a>
                 <h3 class="blog-post-title">Lorem ipsum dolor.</h3>
                 <div class="blog-post-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores facilis fuga id numquam quod saepe soluta! Dolorem, doloribus, illum.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores facilis fuga id numquam quod
+                    saepe soluta! Dolorem, doloribus, illum.
                 </div>
                 <a href="" class="blog-post-button button">Read more</a>
             </article>
@@ -72,7 +76,8 @@
                 </a>
                 <h3 class="blog-post-title">Lorem ipsum dolor.</h3>
                 <div class="blog-post-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores facilis fuga id numquam quod saepe soluta! Dolorem, doloribus, illum.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores facilis fuga id numquam quod
+                    saepe soluta! Dolorem, doloribus, illum.
                 </div>
                 <a href="" class="blog-post-button button">Read more</a>
             </article>
@@ -91,7 +96,8 @@
                 </a>
                 <h3 class="service-post-title">Lorem ipsum dolor.</h3>
                 <div class="service-post-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores facilis fuga id numquam quod saepe soluta! Dolorem, doloribus, illum.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores facilis fuga id numquam quod
+                    saepe soluta! Dolorem, doloribus, illum.
                 </div>
                 <a href="" class="service-post-button button">Read more</a>
             </article>
@@ -101,7 +107,8 @@
                 </a>
                 <h3 class="service-post-title">Lorem ipsum dolor.</h3>
                 <div class="service-post-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores facilis fuga id numquam quod saepe soluta! Dolorem, doloribus, illum.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores facilis fuga id numquam quod
+                    saepe soluta! Dolorem, doloribus, illum.
                 </div>
                 <a href="" class="service-post-button button">Read more</a>
             </article>
@@ -111,7 +118,8 @@
                 </a>
                 <h3 class="service-post-title">Lorem ipsum dolor.</h3>
                 <div class="service-post-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores facilis fuga id numquam quod saepe soluta! Dolorem, doloribus, illum.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores facilis fuga id numquam quod
+                    saepe soluta! Dolorem, doloribus, illum.
                 </div>
                 <a href="" class="service-post-button button">Read more</a>
             </article>
@@ -121,7 +129,8 @@
                 </a>
                 <h3 class="service-post-title">Lorem ipsum dolor.</h3>
                 <div class="service-post-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores facilis fuga id numquam quod saepe soluta! Dolorem, doloribus, illum.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores facilis fuga id numquam quod
+                    saepe soluta! Dolorem, doloribus, illum.
                 </div>
                 <a href="" class="service-post-button button">Read more</a>
             </article>
@@ -143,16 +152,22 @@
                 </div>
                 <div class="form-row">
                     <label class="form-label" for="email">Email</label>
-                    <input class="form-control" type="email" id="email" name="email" placeholder="Type your email" required>
+                    <input class="form-control" type="email" id="email" name="email" placeholder="Type your email"
+                           required>
                 </div>
                 <div class="form-row">
                     <label class="form-label" for="message">Message</label>
-                    <textarea class="form-control" id="message" name="message" placeholder="Type your message" required></textarea>
+                    <textarea class="form-control" id="message" name="message" placeholder="Type your message"
+                              required></textarea>
                 </div>
                 <div class="form-row">
                     <label class="form-checkbox">
                         <input type="checkbox" name="regulations" required>
-                        I hereby give consent for my personal data included in my application to be processed for the purposes of the recruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)
+                        I hereby give consent for my personal data included in my application to be processed for the
+                        purposes of the recruitment process under the European Parliament’s and Council of the European
+                        Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the
+                        processing of personal data and on the free movement of such data, and repealing Directive
+                        95/46/EC (Data Protection Directive)
                     </label>
                 </div>
                 <div class="form-row form-row-last">
